@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.663 2005-04-27 21:01:14 castaglia Exp $
+$Id: NEWS,v 1.664 2005-04-30 18:03:22 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -18,6 +18,7 @@ CVS
 - Bug 2593 - `make install-modules' does not honour DESTDIR enviroment variable.
 - Bug 2596 - STAT command can cause segfault.
 - Bug 2588 - AIX requires _USE_IRS #define to use hstrerror().
+- Bug 2582 - ProFTPD on Tru64 with SIA does not call sia_ses_estab().
 
 1.3.0rc1 - Released 10-Apr-2005
 --------------------------------
